SDLTM Import Plus 4.1.0.X / 2024 SR1

--- a/SDLTM Import Plus/SDLTM.Import/SDLTM.Import.csproj
+++ b/SDLTM Import Plus/SDLTM.Import/SDLTM.Import.csproj
@@ -9,7 +9,7 @@
 	</PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+    <Reference Include="NLog">
       <HintPath>$(TradosFolder)\NLog.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
