--- a/Target Word Count/Sdl.Community.TargetWordCount.Tests/packages.config
+++ b/Target Word Count/Sdl.Community.TargetWordCount.Tests/packages.config
@@ -1,15 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="5.0.0" targetFramework="net48" />
-  <package id="NSubstitute" version="4.3.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
-  <package id="xunit" version="2.4.1" targetFramework="net48" />
+  <package id="Castle.Core" version="5.2.1" targetFramework="net48" />
+  <package id="Microsoft.TestPlatform.ObjectModel" version="17.14.0" targetFramework="net48" />
+  <package id="NSubstitute" version="5.3.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="9.0.5" targetFramework="net48" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net48" />
+  <package id="System.Reflection.Metadata" version="9.0.5" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net48" />
+  <package id="xunit" version="2.9.3" targetFramework="net48" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net48" />
-  <package id="xunit.analyzers" version="0.10.0" targetFramework="net48" />
-  <package id="xunit.assert" version="2.4.1" targetFramework="net48" />
-  <package id="xunit.core" version="2.4.1" targetFramework="net48" />
-  <package id="xunit.extensibility.core" version="2.4.1" targetFramework="net48" />
-  <package id="xunit.extensibility.execution" version="2.4.1" targetFramework="net48" />
-  <package id="xunit.runner.visualstudio" version="2.4.5" targetFramework="net48" developmentDependency="true" />
+  <package id="xunit.analyzers" version="1.21.0" targetFramework="net48" developmentDependency="true" />
+  <package id="xunit.assert" version="2.9.3" targetFramework="net48" />
+  <package id="xunit.core" version="2.9.3" targetFramework="net48" />
+  <package id="xunit.extensibility.core" version="2.9.3" targetFramework="net48" />
+  <package id="xunit.extensibility.execution" version="2.9.3" targetFramework="net48" />
+  <package id="xunit.runner.visualstudio" version="3.1.0" targetFramework="net48" developmentDependency="true" />
 </packages>
