MXLIFF File Type 5.1.0.X / 2024 SR1

--- a/MXLIFF File Type/Sdl.Community.FileTypeSupport.MXLIFF.csproj
+++ b/MXLIFF File Type/Sdl.Community.FileTypeSupport.MXLIFF.csproj
@@ -59,7 +59,7 @@
   <PropertyGroup>
     <ApplicationIcon>
     </ApplicationIcon>
-    <AssemblyOriginatorKeyFile>..\..\Sdl-Community\SdlCommunity.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\SdlCommunity.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <None Include="bil.ico" />
