add new element in xml file

--- a/Reports Viewer Plus/Reports.Viewer.Api/Reports.Viewer.Api.csproj
+++ b/Reports Viewer Plus/Reports.Viewer.Api/Reports.Viewer.Api.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net48</TargetFramework>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <OutputType>Library</OutputType>
+	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
