--- a/Reports Viewer Plus/Reports.Viewer/Reports.Viewer.csproj
+++ b/Reports Viewer Plus/Reports.Viewer/Reports.Viewer.csproj
@@ -13,6 +13,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <UseWPF>true</UseWPF>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
+	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   <ItemGroup>
 
