--- a/Language Weaver Provider/LanguageWeaverProvider.csproj
+++ b/Language Weaver Provider/LanguageWeaverProvider.csproj
@@ -16,7 +16,7 @@
 	
 	<PropertyGroup>
 		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
-		<TradosFolder>C:\Things\Code\SDL\Trados\Bin\Mixed Platforms\Debug</TradosFolder>
+		<TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18</TradosFolder>
 	</PropertyGroup>
 	
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
