--- a/Reports Viewer Plus/Reports.Viewer.Api/Reports.Viewer.Api.csproj
+++ b/Reports Viewer Plus/Reports.Viewer.Api/Reports.Viewer.Api.csproj
@@ -35,7 +35,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>Reports.Viewer.Api.snk</AssemblyOriginatorKeyFile>
-		<TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18</TradosFolder>
+		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
 	</PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
