change path to trados folder

--- a/Reports Viewer Plus/Reports.Viewer.Api/Reports.Viewer.Api.csproj
+++ b/Reports Viewer Plus/Reports.Viewer.Api/Reports.Viewer.Api.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>Reports.Viewer.Api.snk</AssemblyOriginatorKeyFile>
-    <TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18</TradosFolder>
+    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
